Merged tasks module into core